manifests/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: jpetstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jpetstore
  template:
    metadata:
      labels:
        app: jpetstore
    spec:
      containers:
        - name: jpetstore
          image: acr3939.azurecr.io/jpetstore
          ports:
          - containerPort: 8080
