manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jpetstore
spec:
  selector:
    app: jpetstore
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
